# aeroftp

./: .gitignore  AGENTS.md  AI-TRANSPARENCY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TODO-AEROCLOUD-2.0.md  TODO-AEROCLOUD.md  TODO-PHASE2-MULTIPROTOCOL.md  TODO_NEW_PHASE.md  TODO_NEW_PHASE2.md  TODO_SESSION.md  com.aeroftp.AeroFTP.desktop  com.aeroftp.AeroFTP.metainfo.xml  com.aeroftp.AeroFTP.yml  com.aeroftp.AeroVault.xml  com.aeroftp.app.yml  index.html  package-lock.json  package.json  plan-aeroFtp.prompt.md  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/skills/: audit.md  i18n-batch.md  pre-push.md  release.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: benchmark-report.yml
.github/agents/: aeroftp-desktop-security-audit.agent.md
.github/prompts/: plan-aeroFtp.prompt.md
.github/scripts/: security-regression.cjs
.github/workflows/: aerorsync-protocol.yml  build.yml  cli-smoke.yml  delta-sync-integration.yml  smoke-upload-artifact-v7.yml  strada-c-prototype.yml
aur/: .SRCINFO  PKGBUILD  README.md
docs/: AEROAGENT-CAPABILITIES.md  AEROAGENT.md  AEROVAULT-V2-SPEC.md  ARCHIVE-FEATURES-ROADMAP.md  CLI-GUIDE.md  COMMUNITY-BENCHMARK.md  COMPETITOR-ANALYSIS.md  CREDENTIAL-ISOLATION.md  GITHUB-INTEGRATION.md  GoogleDrive_Guide.md  Guida_GoogleDrive.md  HOSTING-INTEGRATION.md  LLM-INTEGRATION-GUIDE.md  PROTOCOL-FEATURES.md  PROVIDER-INTEGRATION-GUIDE.md  README.md  RELEASE.md  SECURITY-AUDIT-SUMMARY.md  THREAT-MODEL.md  TRANSLATIONS.md  UNIVERSAL-VAULT.md  WINDOWS-COMPATIBILITY.md
docs/dev/: ROADMAP.md
docs/security-evidence/: AEROFTP-CLI-AUDIT-2026-05-06.md  AEROFTP-CLI-AUDIT-EXECUTIVE-2026-05-06.md  README.md  SECURITY-EVIDENCE-TEMPLATE.md  (+8 more)
public/: splash.html
scripts/: i18n-stats.ts  i18n-validate.ts
snap/: snapcraft.yaml
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  config.json  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/mimetypes/: aerovault.icns
src-tauri/installer/: hooks.nsh
src-tauri/installer/portable/: README.txt  portable.marker
src-tauri/resources/: aeroftp-restart-helper  aeroftp-update-helper  com.aeroftp.update.policy
src-tauri/scripts/: deb-postinst.sh
src-tauri/src/: aerovault.rs  aerovault_v2.rs  agent_memory_db.rs  agent_session.rs  ai.rs  ai_stream.rs  ai_tools.rs  archive_browse.rs  chat_history.rs  cloud_config.rs  cloud_filter_badge.rs  cloud_provider_factory.rs  cloud_service.rs  context_intelligence.rs  credential_store.rs  cross_profile_commands.rs  cross_profile_transfer.rs  crypto.rs  cryptomator.rs  cyber_tools.rs  delta_sync.rs  delta_sync_rsync.rs  delta_transport.rs  file_tags.rs  file_watcher.rs  filesystem.rs  filezilla_import.rs  ftp.rs  ftp_session_pool.rs  ftp_transfer_executor.rs  health_check.rs  host_key_check.rs  image_edit.rs  infinicloud.rs  keystore_export.rs  lib.rs  license.rs  local_panel_watcher.rs  main.rs  master_password.rs  (+42 more)
src-tauri/src/aerorsync/: README.md  delta_transport_impl.rs  driver.rs  engine_adapter.rs  events.rs  fallback_policy.rs  fixtures.rs  frame_io.rs  live_tests.rs  mock.rs  mod.rs  native_driver.rs  planner.rs  protocol.rs  real_wire.rs  remote_command.rs  rsync_event_bridge.rs  russh_session_transport.rs  server.rs  session.rs  shell_escape.rs  ssh_transport.rs  streaming_writer.rs  tests.rs  transport.rs  types.rs
src-tauri/src/aerorsync/capture/: Dockerfile.native-sshd  Dockerfile.real-rsync-sshd  README.md  capture_wrapper_transcripts.sh  docker-compose.native.yml  docker-compose.real-rsync.yml  docker-compose.yml  entrypoint.sh  rsync_server_wrapper.sh  run_native_live_tests.sh  run_real_rsync_capture.sh  sshd_config  sshd_config_real_rsync_ed25519.conf
src-tauri/src/aerorsync/capture/keys/: id_ed25519  id_ed25519.pub
src-tauri/src/ai_core/: agent_tools.rs  app_tools.rs  cli_impl.rs  credential_provider.rs  event_sink.rs  gui_tools.rs  local_tools.rs  mcp_impl.rs  mod.rs  remote_backend.rs  remote_tools.rs  system_tools.rs  tauri_impl.rs  tools.rs
src-tauri/src/mcp/: mod.rs  notifier.rs  pool.rs  prompts.rs  resources.rs  security.rs  server.rs  tools.rs  transport.rs
src-tauri/src/providers/: atomic_write.rs  azure.rs  b2.rs  box_provider.rs  cloudinary.rs  drime_cloud.rs  dropbox.rs  filelu.rs  filen.rs  fourshared.rs  ftp.rs  google_drive.rs  google_photos.rs  http_retry.rs  imagekit.rs  immich.rs  internxt.rs  jottacloud.rs  kdrive.rs  koofr.rs  mega.rs  mega_crypto.rs  mega_native.rs  mod.rs  oauth1.rs  oauth2.rs  onedrive.rs  opendrive.rs  pcloud.rs  s3.rs  sftp.rs  swift.rs  types.rs  uploadcare.rs  webdav.rs  xml_text.rs  yandex_disk.rs  zoho_workdrive.rs
src-tauri/src/providers/filen/: mod.rs  notes.rs
src-tauri/src/providers/github/: actions.rs  auth.rs  client.rs  errors.rs  graphql.rs  mod.rs  model.rs  pages.rs  rate_limit.rs  releases_mode.rs  repo_mode.rs
src-tauri/src/providers/gitlab/: client.rs  mod.rs  model.rs
src-tauri/src/rsync_native_proto/: README.md  delta_transport_impl.rs  driver.rs  engine_adapter.rs  events.rs  fallback_policy.rs  fixtures.rs  frame_io.rs  live_tests.rs  mock.rs  mod.rs  native_driver.rs  planner.rs  protocol.rs  real_wire.rs  remote_command.rs  rsync_event_bridge.rs  server.rs  session.rs  ssh_transport.rs  tests.rs  transport.rs  types.rs
src-tauri/src/rsync_native_proto/capture/: Dockerfile.native-sshd  Dockerfile.rsync-sshd  README.md  docker-compose.native.yml  rsync_proxy.py  run_native_live_tests.sh  run_real_rsync_capture.sh
src-tauri/src/sync_core/: compare.rs  mod.rs  scan.rs  sync.rs
src-tauri/src/util/: abort_on_drop.rs  mod.rs  provider_guard.rs  shutdown.rs
src-tauri/tests/: integration_b2.rs  integration_delta_sync.rs  tool_parity.rs
src-tauri/tests/fixtures/sftp-rsync/: .gitignore  Dockerfile  Dockerfile.password  docker-compose.password.yml  docker-compose.yml  entrypoint.sh  setup.sh
supabase/: generate-keypair.ts  schema.sql
(+358 files in other folders)
