[package]
name = "aeroftp"
version = "3.4.0"
description = "AeroFTP - Fast, Beautiful, Reliable FTP Client"
authors = ["axpdev"]
license = "GPL-3.0"
repository = "https://github.com/axpdev-lab/aeroftp"
edition = "2021"
rust-version = "1.85.0"
default-run = "aeroftp"

[lib]
name = "ftp_client_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aeroftp-cli"
path = "src/bin/aeroftp_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
filetime = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
log = "0.4"
futures-util = "0.3"
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
suppaftp = { version = "=8.0.1", features = ["tokio", "tokio-rustls-aws-lc-rs", "deprecated"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"
webpki-roots = "0.26"
rustls-native-certs = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
portable-pty = "0.9"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
notify = { version = "8", default-features = true }                          # Filesystem watcher (v8 required by debouncer-full 0.6)
notify-debouncer-full = "0.6"                                               # Debouncer with rename tracking, event dedup, quiet-period batching
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-autostart = "2"                                               # Launch on system startup
tauri-plugin-window-state = "2"

# Multi-protocol providers (Sprint 1)
async-trait = "0.1"
regex = "1"
url = "2"
urlencoding = "2"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
md-5 = "0.10"
zip = { version = "8", default-features = false, features = ["deflate", "aes-crypto"] }
walkdir = "2"
quick-xml = "0.39"

# OAuth2 Cloud Providers (Sprint 2)
oauth2 = { version = "5", default-features = false }
http = "1"
open = "5"
rand = "0.8"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2.3.3"
semver = "1.0.27"
sigstore = { version = "0.13", default-features = false, features = ["bundle", "sigstore-trust-root", "native-tls"] }

# Secure Credential Storage (v1.3.2 hotfix)
argon2 = "0.5"
aes-gcm = "0.10"
aes = "0.8"                                                            # AES block cipher (Internxt)
cbc = "0.1"                                                            # AES-CBC mode (Internxt mnemonic decryption)
ctr = "0.9"                                                            # AES-CTR mode (Internxt file encryption)

# MEGA Integration (Quick Connect Beta v0.5.0)
secrecy = "0.10"
zeroize = { version = "1", features = ["derive"] }
ring = "0.17.14"

# Box, pCloud, Azure, Filen providers (v1.4.1)
pbkdf2 = "0.12"
rsa = "0.9"
num-bigint-dig = "0.8"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"

# SFTP Support (Sprint 3 - v1.3.0)
# SFTP channel writes: see sftp-upload-0byte-bug.md in memory
russh = { version = "0.59", features = ["ring"] }
russh-sftp = "2.1"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }

# Archive Support with Encryption (v1.3.0+)
sevenz-rust = { version = "0.6", features = ["aes256", "compress"] }  # 7z with AES-256
unrar = "0.5"                                                          # RAR extraction
trash = "5"                                                            # Cross-platform trash/recycle bin
tar = "0.4.45"                                                        # TAR archives (CVE symlink chmod + PAX size fix)
flate2 = "1.0"                                                        # Gzip compression
xz2 = { version = "0.1", features = ["static"] }                       # XZ/LZMA compression (static: no system liblzma needed)
bzip2 = "0.6"                                                         # Bzip2 compression
arboard = "3"                                                         # Native clipboard access
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }  # Image editing + tray badge
libc = "0.2"                                                              # Unix UID for badge socket path

# Cryptomator vault support (v1.6.0)
scrypt = "0.11"                                                        # Cryptomator KDF
aes-kw = "0.2"                                                         # AES Key Wrap (RFC 3394)
aes-siv = "0.7"                                                        # AES-SIV filename encryption
data-encoding = "2"                                                    # Base32/Base64 encoding
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }         # JWT parsing for vault.cryptomator (CVE-2026-25537 fix)

# AeroVault v2 - Military-Grade Encryption (v1.8.0)
aerovault = "0.3"                                                      # AeroVault v2 standalone crate (crates.io)
chacha20poly1305 = "0.10"                                              # ChaCha20-Poly1305 (used by CryptoLab in cyber_tools)
hkdf = "0.12"                                                          # HKDF key derivation (used by crypto.rs keystore)

# Security Toolkit - Cyber Tools (v2.1.0)
blake3 = "1"                                                           # BLAKE3 hash (Hash Forge)
similar = "2"                                                          # Unified diff for local_diff tool

# TOTP 2FA for AeroVault (v2.3.0)
totp-rs = { version = "5", features = ["qr"] }                        # RFC 6238 TOTP with otpauth URI

# Chat History SQLite (v2.3.0)
rusqlite = { version = "0.32", features = ["bundled"] }                # SQLite with FTS5 (bundled = no system libsqlite3)

# CLI Foundation (v2.3.0)
clap = { version = "4", features = ["derive", "env"] }                  # CLI argument parser
clap_complete = "4"                                                    # Shell completion generation
indicatif = "0.18"                                                     # Progress bars for CLI
rpassword = "7"                                                        # Secure password input (no echo)
ctrlc = "3"                                                            # Graceful Ctrl+C with cleanup
globset = "0.4"                                                        # Glob patterns for batch transfers
tempfile = "3"                                                        # Temporary files for stdin upload/resume workflows

# Local speech-to-text — excluded on macOS (WKWebView has native Web Speech API)
[target.'cfg(not(target_os = "macos"))'.dependencies]
hound = "3"
whisper-rs = "0.16.0"

# Windows Explorer badge integration (v2.0.5)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_CloudFilters",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
] }

# Linux-only: localhost HTTP server to work around WebKitGTK limitations
# (Monaco ESM, xterm.js, canvas, iframe CSS). Not needed on macOS/Windows.
[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-localhost = "2"

[dev-dependencies]

[features]
custom-protocol = ["tauri/custom-protocol"]
