[package]
name = "aeroftp"
version = "3.6.10"
description = "AeroFTP - Fast, Beautiful, Reliable FTP Client"
authors = ["axpdev"]
license = "GPL-3.0"
repository = "https://github.com/axpdev-lab/aeroftp"
edition = "2021"
rust-version = "1.85.0"
default-run = "aeroftp"

[lib]
name = "ftp_client_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aeroftp-cli"
path = "src/bin/aeroftp_cli.rs"

[[bin]]
name = "aerorsync_serve"
path = "src/bin/aerorsync_serve.rs"
# The real server body is gated behind the `aerorsync` feature. When the
# feature is OFF this binary compiles to a stub that prints a message and
# exits with code 1, so the Tauri bundler can still copy the expected
# artifact on macOS and Windows without failing the release build.
# (This dev helper is the wire-protocol oracle used by unit and live tests;
# the production path talks to stock `rsync --server` via `WrapperParity`.)

[[bin]]
name = "seed_test_profiles"
path = "src/bin/seed_test_profiles.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
filetime = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
log = "0.4"
futures-util = "0.3"
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
suppaftp = { version = "=8.0.3", features = ["tokio", "tokio-rustls-aws-lc-rs", "deprecated"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"
webpki-roots = "0.26"
rustls-native-certs = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
portable-pty = "0.9"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
notify = { version = "8", default-features = true }                          # Filesystem watcher (v8 required by debouncer-full 0.6)
notify-debouncer-full = "0.6"                                               # Debouncer with rename tracking, event dedup, quiet-period batching
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-autostart = "2"                                               # Launch on system startup
tauri-plugin-window-state = "2"

# Multi-protocol providers (Sprint 1)
async-trait = "0.1"
regex = "1"
url = "2"
urlencoding = "2"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
md-5 = "0.10"
zip = { version = "8", default-features = false, features = ["deflate", "aes-crypto"] }
walkdir = "2"
quick-xml = "0.39"

# OAuth2 Cloud Providers (Sprint 2)
oauth2 = { version = "5", default-features = false }
http = "1"
open = "5"
rand = "0.8"
# rand 0.10 alias used only by `aeroftp-cli serve sftp` to feed russh 0.60's
# new CryptoRng bound on `PrivateKey::random()`. The rest of the codebase
# stays on rand 0.8 to avoid an ecosystem-wide bump.
rand_010 = { package = "rand", version = "0.10" }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2.3.3"
semver = "1.0.28"
sigstore = { version = "0.13", default-features = false, features = ["bundle", "sigstore-trust-root", "native-tls"] }

# Secure Credential Storage (v1.3.2 hotfix)
argon2 = "0.5"
aes-gcm = "0.10"
aes = "0.8"                                                            # AES block cipher (Internxt)
cbc = "0.1"                                                            # AES-CBC mode (Internxt mnemonic decryption)
ctr = "0.9"                                                            # AES-CTR mode (Internxt file encryption)
crypto_secretbox = "0.1"                                               # XSalsa20-Poly1305 NaCl secretbox (rclone crypt)

# MEGA Integration (Quick Connect Beta v0.5.0)
secrecy = "0.10"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
ring = "0.17.14"

# Box, pCloud, Azure, Filen providers (v1.4.1)
pbkdf2 = "0.12"
rsa = "0.9"
num-bigint-dig = "0.8"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"

# SFTP Support (Sprint 3 - v1.3.0)
# SFTP channel writes: see sftp-upload-0byte-bug.md in memory
russh = { version = "0.60.1", features = ["ring"] }
russh-sftp = "2.1"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }

# Archive Support with Encryption (v1.3.0+)
sevenz-rust = { version = "0.6", features = ["aes256", "compress"] }  # 7z with AES-256
unrar = "0.5"                                                          # RAR extraction
trash = "5"                                                            # Cross-platform trash/recycle bin
tar = "0.4.45"                                                        # TAR archives (CVE symlink chmod + PAX size fix)
flate2 = "1.0"                                                        # Gzip compression
xz2 = { version = "0.1", features = ["static"] }                       # XZ/LZMA compression (static: no system liblzma needed)
bzip2 = "0.6"                                                         # Bzip2 compression
arboard = "3"                                                         # Native clipboard access
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }  # Image editing + tray badge
libc = "0.2"                                                              # Unix UID for badge socket path

# Cryptomator vault support (v1.6.0)
scrypt = "0.11"                                                        # Cryptomator KDF
aes-kw = "0.2"                                                         # AES Key Wrap (RFC 3394)
aes-siv = "0.7"                                                        # AES-SIV filename encryption
data-encoding = "2"                                                    # Base32/Base64 encoding
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }         # JWT parsing for vault.cryptomator (CVE-2026-25537 fix)

# AeroVault v2 - Military-Grade Encryption (v1.8.0)
aerovault = "0.3.4"                                                    # AeroVault v2 standalone crate (crates.io)
chacha20poly1305 = "0.10"                                              # ChaCha20-Poly1305 (used by CryptoLab in cyber_tools)
hkdf = "0.12"                                                          # HKDF key derivation (used by crypto.rs keystore)

# Security Toolkit - Cyber Tools (v2.1.0)
blake3 = "1"                                                           # BLAKE3 hash (Hash Forge)
similar = "3"                                                          # Unified diff for local_diff tool

# TOTP 2FA for AeroVault (v2.3.0)
totp-rs = { version = "5", features = ["qr"] }                        # RFC 6238 TOTP with otpauth URI

# Chat History SQLite (v2.3.0)
rusqlite = { version = "0.32", features = ["bundled"] }                # SQLite with FTS5 (bundled = no system libsqlite3)

# CLI Foundation (v2.3.0)
clap = { version = "4", features = ["derive", "env"] }                  # CLI argument parser
clap_complete = "4"                                                    # Shell completion generation
indicatif = "0.18"                                                     # Progress bars for CLI
rpassword = "7"                                                        # Secure password input (no echo)
ctrlc = "3"                                                            # Graceful Ctrl+C with cleanup
globset = "0.4"                                                        # Glob patterns for batch transfers
tempfile = "3"                                                        # Temporary files for stdin upload/resume workflows
libunftp = "0.23"                                                      # FTP server framework (serve ftp)
unftp-core = "0.1"                                                     # FTP server storage/auth traits

# Interactive TUI (ncdu disk explorer)
ratatui = "0.30"                                                       # Terminal UI framework
crossterm = "0.29"                                                     # Cross-platform terminal control

# aerorsync — native rsync protocol 31/32 implementation in Rust.
# Optional dependencies gated by the `aerorsync` feature. Used by
# `real_wire.rs` to decompress DEFLATED_DATA literals emitted by rsync's
# sender when CPRES_ZSTD is negotiated. Off with `--no-default-features`.
zstd = { version = "0.13", optional = true }
# aerorsync — XXH3-128 file-level checksum trailer (S8j). Provides
# `xxhash_rust::xxh3::xxh3_128` used by the driver to compute the file
# checksum rsync verifies at the end of a delta stream.
xxhash-rust = { version = "0.8", features = ["xxh3"], optional = true }

# Local speech-to-text — excluded on macOS (WKWebView has native Web Speech API)
[target.'cfg(not(target_os = "macos"))'.dependencies]
hound = "3"
whisper-rs = "0.16.0"

# Windows Explorer badge integration (v2.0.5)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_CloudFilters",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
] }

# Linux-only dependencies
# - tauri-plugin-localhost: WebKitGTK workaround (Monaco ESM, xterm.js, canvas, iframe CSS)
# - fuser: FUSE virtual filesystem mount (macOS requires macFUSE installed by user)
[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-localhost = "2"
fuser = "0.16"

[dev-dependencies]

[features]
default = ["aerorsync"]
custom-protocol = ["tauri/custom-protocol"]

# aerorsync — AeroFTP's native Rust implementation of the rsync wire
# protocol 31 (in-tree since PR-T11, default-on). Turns on the
# cross-platform Rust implementation under `src/aerorsync/`, enabling
# byte-level delta sync on Windows (first-class) and as the preferred
# path on Unix when `settings::load_native_rsync_enabled()` returns
# true. The `native_rsync_enabled` runtime toggle and its TOML config
# file retain the legacy name for backward compatibility.
# Disable with `--no-default-features` for leaner builds or when
# debugging the classic binary-rsync path on Unix.
aerorsync = ["dep:zstd", "dep:xxhash-rust"]

# Strada C — Docker-harness lane cfg flags. Declared here so
# `#[cfg(ci_lane2)]` / `#[cfg(ci_lane3)]` do not surface
# `unexpected_cfgs` warnings under `-D warnings`. Enable on CI with
# `RUSTFLAGS='--cfg ci_lane3'` (or `ci_lane2`); left unset otherwise.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ci_lane2)',
    'cfg(ci_lane3)',
] }
